--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-    background: url('bg-desktop.webp');
+    background: url('depositphotos_359966766-stock-illustration-doodle-music-notes-pattern-background.jpg');
     margin: 0;
     padding: 0;
 }
